Revamp footer and fix layout overflow error

--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -1,20 +1,10 @@
 .container {
   min-height: 100vh;
-  padding: 0 0.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  /* align-items: center; */
-  height: 100vh;
+  height: 100%;
 }
 
 .main {
-  padding: 5rem 0;
   flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  /* align-items: center; */
   font-size: 1.25rem;
 }
 
